--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,17 @@
   left: 50%;
   transform: translateX(-50%);
 }
+
+.main-product {
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.main-product-section .slider-box {
+  padding: 20px 5px;
+}
+/* 
+.swiper-slide-visible.swiper-slide-fully-visible.swiper-slide-thumb-active {
+  border: 3px solid rgba(var(--theme-color), 1);
+  border-radius: 10px;
+} */
